# chipi-backend

./: .gitignore  README.md  pyproject.toml
src/: api.py  bot.py  config.py  db.py  stt.py  tts.py
